# CG-Abheastian

./: CMakeLists.txt  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  resources.qrc  userinput.cpp  vertex.h
shaders/: fragshader.glsl  vertshader.glsl
